--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,15 +1,85 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@font-face {
+    font-family: "relogio";
+    src:
+      url("ds_digital/DS-DIGI.TTF") format("woff2"),
+      url("ds_digital/DS-DIGIB.TTF") format("woff"),
+      url("ds_digital/DS-DIGII.TTF") format("truetype"),
+      url("ds_digital/DS-DIGIT.TTF") format("embedded-opentype");
+    font-weight: normal;
+    font-style: normal;
+  }
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
+
 body{
     background: #ba0000 90%;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 #interface_app{
     display: flex;
-    width: 90%;
-    height: 90vh;
-    background-color: aliceblue;
+    flex-direction: column;
+    justify-content: center;
+    width: 80%;
+    height: 100vw;
+    /* background-color: aliceblue; */
+}
+
+#interface_app h1{
+    text-align: center;
+    font-size: 2.4rem;
+    text-shadow: -2px 1px 8px #000000;
+    color: #fff;
+    margin-bottom: 20px;
+    
+}
+
+#interface_app .display {
+    gap: 40px;
+    border-radius: 10px;
+    display: flex;
+    background-color: #750303;
+    height: 80%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* border: 1px solid; */
+}
+
+#interface_app .display .background {
+    background:url(../imagens/Icon.png); background-size:cover;
+    /* background-color: #fff; */
+    width:50%;
+    height: 50%;
+}
+
+#interface_app .display #timer {
+    font-family: relogio;
+    font-size: 4rem;
+    color: #fff;
+}
+
+#interface_app .display .btnplay{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3rem;
+    background-image: linear-gradient( #FFFFFF ,#B9B9B9 );
+    color: #ba0000;
+    border-radius: 10px;
+    font-weight: 500;
+    padding: 10px;
+    width: 130px;
 }
