--- a/estilos/style.css
+++ b/estilos/style.css
@@ -63,7 +63,7 @@ body{
     border-radius: 10px;
     display: flex;
     background-color: #750303;
-    /* height: 240%; */
+    height: 20%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
